# ttalps

./: .gitignore  Data_Exploration-OriginalCopy.ipynb  Data_Exploration.py  Data_Numbers.ipynb  Decays.ipynb  README.md  aux.py  counting_script.py  cross_sections.txt  data_classes.py  dc_tests.ipynb  myplot.py  physics.py  requirements.txt  setup.sh
MadAnalysis/: ALPanalysis.cpp  ALPanalysis.h  count_muons.cpp  readout_1.cpp  readout_1.h
TdAlps/: HighRunning.py  LowRunning.py  README.md  TdAlps.py  basisrotation.py  matching.py  params.py  tests.py  tools.py
UFO/: CT_couplings.py  __init__.py  coupling_orders.py  couplings.py  decays.py  lorentz.py  parameters.py  particles.py  propagators.py  py3_model.pkl  vertices.py
external_tools/: countEvents.py
external_tools/hepmc2root/: hepmc2root.cpp  hepmc2root.py
general_tools/: countEvents.py  get_muon_branching_ratio.py
general_tools/hepmc2root/: hepmc2root.py
limits_tools/: compare_limits.py  compare_reweighted_distributions.py  convert_limits_to_ctau_vs_mass.py  fit_2d_limits.py  get_cut_efficiency.py  get_limits.py  get_optimal_xsec_per_signal.py  get_xsec_to_coupling_scaling.py  limits_params.py  limits_tools.py  plot_2d_isobarns.py  plot_2d_limits.py  plot_limits.py  prepare_datacard.py
madgraph_production_tools/: delphes_card_CMS_PileUp.tcl  params_test.py  run_production.py  run_production.sh  run_production.sub
old_files/: Decays.ipynb  cut_lines.py  dc_tests.ipynb
plotting_tools/: PlotHelpers.h  plot_Rlxy.C  plot_ctau_vs_mass.py  plot_dimuon_mass_log.C  plot_histograms.C  plot_lxy_rebinned.C  plot_pt.C  plot_signal_2dhistograms.C  plot_signal_histograms.C
selection_tools/: CMakeLists.txt  apply_selections.C  get_rlxy.py  number_of_events.C  plot_muon_tau.py  prepare_histograms.C  print_ctau_per_mass.py  print_number_of_events.C  run_merge_histograms.sh  run_prepare_histograms.sh  run_prepare_histograms.sub  run_preselection.sh  run_preselection.sub  run_production.sh
selection_tools/include/: CutsManager.hpp  Event.hpp  EventReader.hpp  Helpers.hpp  HistogramFiller.hpp  HistogramSet.hpp  Particle.hpp
selection_tools/src/: CutsManager.cpp  Event.cpp  EventReader.cpp  Helpers.cpp  HistogramFiller.cpp  HistogramSet.cpp  Particle.cpp
